--- a/projekt_zespolowy/Views/Shared/_Layout.cshtml
+++ b/projekt_zespolowy/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
                 <a asp-controller="Liabilities" asp-action="Index" class="list-group-item list-group-item-action list-group-item-light p-3">
                     <i class="fas fa-hand-holding-usd me-3" style="width: 20px;"></i>Długi
                 </a>
+                <a asp-controller="SavingsGoals" asp-action="Index" class="list-group-item list-group-item-action list-group-item-light p-3">
+                    <i class="fas fa-bullseye me-3" style="width: 20px;"></i>Cele Oszczędnościowe
+                </a>
                 <a asp-controller="Categories" asp-action="Index" class="list-group-item list-group-item-action list-group-item-light p-3">
                     <i class="fas fa-tags me-3" style="width: 20px;"></i>Kategorie
                 </a>
